# pythia

./: CHANGELOG.md  LICENSE  Makefile  README.md  cabal.project  ci.nix  flake.nix  hie.yaml  notes.txt  pythia.cabal  stack.yaml  stack_lts-18.yaml  stack_lts-19.yaml  stack_nightly.yaml  system-info.cabal
.github/workflows/: cabal.yaml  cabal_8-10.yaml  cabal_9-0.yaml  cabal_9-2.yaml  cabal_ci.yaml  ci.yaml  ghc_8-10-7.yaml  ghc_8-10.yaml  ghc_9-0-2.yaml  ghc_9-0.yaml  ghc_9-2-1.yaml  ghc_9-2.yaml  haddock_ci.yaml  nix.yaml  nix_ci.yaml  stack.yaml  stack_ci.yaml  stack_lts-18.yaml  stack_lts-19.yaml  stack_nightly.yaml  style_ci.yaml
app/: Args.hs  CabalVersion.hs  Main.hs
ci_scripts/: cabal-fmt.sh  haddock.sh
docs/: Pythia-Control-Exception.html  Pythia-Data-Command.html  Pythia-Data-Percentage-Internal.html  Pythia-Data-Percentage.html  Pythia-Data-RunApp.html  Pythia-Data-Supremum.html  Pythia-Internal-ShellApp.html  Pythia-Services-Battery-Acpi.html  Pythia-Services-Battery-SysFs.html  Pythia-Services-Battery-Types.html  Pythia-Services-Battery-UPower.html  Pythia-Services-Battery.html  Pythia-Services-GlobalIp-Types.html  Pythia-Services-GlobalIp.html  Pythia-Services-Memory-Free.html  Pythia-Services-Memory-Types.html  Pythia-Services-Memory.html  Pythia-Services-NetInterface-Ip.html  Pythia-Services-NetInterface-NmCli.html  Pythia-Services-NetInterface-Types.html  Pythia-Services-NetInterface.html  Pythia-Services-Time.html  Pythia-Services-Types-Network.html  Pythia-Utils.html  Pythia.html  doc-index-124.html  doc-index-126.html  doc-index-36.html  doc-index-37.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-94.html  (+30 more)
docs/src/: Pythia.Control.Exception.html  Pythia.Data.Command.html  Pythia.Data.Percentage.Internal.html  Pythia.Data.Percentage.html  Pythia.Data.RunApp.html  Pythia.Data.Supremum.html  Pythia.Internal.ShellApp.html  Pythia.Prelude.html  Pythia.Services.Battery.Acpi.html  Pythia.Services.Battery.SysFs.html  Pythia.Services.Battery.Types.html  Pythia.Services.Battery.UPower.html  Pythia.Services.Battery.html  Pythia.Services.GlobalIp.Types.html  Pythia.Services.GlobalIp.html  Pythia.Services.Memory.Free.html  Pythia.Services.Memory.Types.html  Pythia.Services.Memory.html  Pythia.Services.NetInterface.Ip.html  Pythia.Services.NetInterface.NmCli.html  Pythia.Services.NetInterface.Types.html  Pythia.Services.NetInterface.html  Pythia.Services.Time.html  Pythia.Services.Types.Network.html  Pythia.Utils.html  Pythia.html
examples/: config.toml
exe-internal/Pythia/: Args.hs  Runner.hs
nix/: cabal.nix  cabal_8-10.nix  cabal_9-0.nix  ghc_9-2.nix  ghc_base.nix  stack.nix  stack_base.nix  stack_lts-18.nix  stack_lts-19.nix  stack_nightly.nix
runner/Pythia/: Runner.hs
runner/Pythia/Runner/: Args.hs  Command.hs  These.hs  Toml.hs  Utils.hs
runner/Pythia/Runner/Command/: Battery.hs  GlobalIp.hs  Memory.hs  NetConn.hs  NetInterface.hs  Time.hs
scripts/: cabal-fmt_inplace.sh  gen_haddock.sh  ormolu_inplace.sh
src/: Pythia.hs
src/Pythia/: Data.hs  Prelude.hs  Printer.hs  ShellApp.hs  Supremum.hs  Utils.hs
src/Pythia/Class/: Printer.hs
src/Pythia/Control/: Exception.hs
src/Pythia/Data/: Command.hs  Percentage.hs  RunApp.hs  Supremum.hs
src/Pythia/Data/Percentage/: Internal.hs
src/Pythia/Internal/: ShellApp.hs
src/Pythia/Services/: Battery.hs  GlobalIP.hs  GlobalIp.hs  Memory.hs  NetInterface.hs  Network.hs  Time.hs  Types.hs
src/Pythia/Services/Battery/: Acpi.hs  ChargeStatus.hs  State.hs  SysFs.hs  Types.hs  UPower.hs
src/Pythia/Services/Battery/ChargeStatus/: UPower.hs
src/Pythia/Services/Battery/State/: UPower.hs
src/Pythia/Services/GlobalIP/: Types.hs
src/Pythia/Services/GlobalIp/: Types.hs
src/Pythia/Services/Memory/: Free.hs  Types.hs
src/Pythia/Services/NetInterface/: Ip.hs  NmCli.hs  Types.hs
src/Pythia/Services/Network/: Connection.hs  GlobalIP.hs  Interface.hs  NetInterface.hs  Types.hs
src/Pythia/Services/Network/Connection/: NmCli.hs  Types.hs
src/Pythia/Services/Network/GlobalIP/: Types.hs
src/Pythia/Services/Network/IP/: Global.hs  Local.hs  Types.hs
src/Pythia/Services/Network/IP/Global/: Common.hs  Types.hs
src/Pythia/Services/Network/IP/Local/: IfConfig.hs  NmCli.hs  Types.hs
src/Pythia/Services/Network/Interface/: Ip.hs  NmCli.hs  Types.hs
src/Pythia/Services/Network/NetInterface/: Ip.hs  NmCli.hs  Types.hs
src/Pythia/Services/Types/: Network.hs
src/System/: Info.hs
src/System/Info/: Data.hs  Error.hs  ShellApp.hs  Utils.hs
src/System/Info/Data/: BoundedNat.hs  Command.hs  Error.hs  NonNegative.hs  QueryError.hs
src/System/Info/Network/: Connection.hs
src/System/Info/Network/Connection/: NetworkManager.hs  Types.hs
src/System/Info/Network/Connection/NetworkManager/: Parsing.hs
src/System/Info/Power/: Battery.hs
src/System/Info/Power/Battery/: Types.hs  UPower.hs
src/System/Info/Power/Battery/UPower/: Parsing.hs
src/System/Info/Services/: Battery.hs  Network.hs
src/System/Info/Services/Battery/: ChargeStatus.hs  State.hs  Types.hs
src/System/Info/Services/Battery/ChargeStatus/: UPower.hs
src/System/Info/Services/Battery/State/: UPower.hs
src/System/Info/Services/Network/: Connection.hs  Types.hs
src/System/Info/Services/Network/Connection/: NetworkManager.hs  NmCli.hs  Types.hs
test/doctest/: Main.hs
test/functional/: Main.hs
test/functional/Functional/: Prelude.hs
test/functional/Functional/Pythia/Services/: Battery.hs  GlobalIp.hs  Memory.hs  NetConnection.hs  NetInterface.hs  Time.hs
test/integration/: Main.hs
test/integration/Integration/: Configuration.hs  Prelude.hs
test/integration/Integration/Pythia/Services/: Battery.hs  GlobalIp.hs  Memory.hs  NetConnection.hs  NetInterface.hs  Time.hs
test/integration/config/pythia/: config.toml
test/unit/: Main.hs
test/unit/Unit/: Prelude.hs
tools/: doctest.sh  format.sh  functional_tests.sh  haddock.sh  lint-refactor.sh  lint.sh
(+25 files in other folders)
