cabal-version:      2.4
name:               pythia
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.2.8 || ==9.4.7 || ==9.6.3
copyright:          2021-2023 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/pythia/
bug-reports:        https://github.com/tbidne/pythia/issues
synopsis:           A utility program for retrieving system information.
description:
  @pythia@ retrieves system information. It is intended to be used with
  existing utilities the user already has on their system.
  .
  The package is organized into self-contained services, where a given
  service is used to query a particular item of information. For instance,
  to query battery information, one would use the service defined in
  "Pythia.Services.Battery".
  .
  The entry point is "Pythia".

category:           System
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/pythia

common common-exts
  default-extensions:
    AllowAmbiguousTypes
    ApplicativeDo
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators
    ViewPatterns

library
  import:           common-exts
  exposed-modules:
    Pythia
    Pythia.Control.Exception
    Pythia.Data.Command
    Pythia.Data.Percentage
    Pythia.Data.Percentage.Internal
    Pythia.Internal.ShellApp
    Pythia.Prelude
    Pythia.Services.Battery
    Pythia.Services.Battery.Acpi
    Pythia.Services.Battery.SysFs
    Pythia.Services.Battery.Types
    Pythia.Services.Battery.UPower
    Pythia.Services.GlobalIp
    Pythia.Services.GlobalIp.Types
    Pythia.Services.Memory
    Pythia.Services.Memory.Free
    Pythia.Services.Memory.Types
    Pythia.Services.NetInterface
    Pythia.Services.NetInterface.Ip
    Pythia.Services.NetInterface.NmCli
    Pythia.Services.NetInterface.Types
    Pythia.Services.Time
    Pythia.Services.Types.Network
    Pythia.Utils

  build-depends:
    , base                   >=4.16.0.0  && <4.19
    , bytestring             >=0.10.10.0 && <0.13
    , containers             ^>=0.6.2.1
    , deepseq                >=1.4.4.0   && <1.6
    , effects-exceptions     ^>=0.1
    , effects-fs             ^>=0.1
    , effects-terminal       ^>=0.1
    , effects-time           ^>=0.1
    , effects-typed-process  ^>=0.1
    , megaparsec             >=7.0.5     && <9.5
    , optics-core            ^>=0.4
    , refined                >=0.6       && <0.9
    , si-bytes               ^>=0.1
    , smart-math             ^>=0.1
    , template-haskell       >=2.17.0.0  && <2.22
    , text                   >=1.2.3.2   && <2.1
    , text-display           >=0.0.3.0   && <0.6
    , time                   >=1.9.3     && <1.14
    , time-conv              ^>=0.1

  hs-source-dirs:   src
  default-language: Haskell2010

library pythia-exe-internal
  import:           common-exts
  other-modules:    Paths_pythia
  autogen-modules:  Paths_pythia
  exposed-modules:
    Pythia.Args
    Pythia.Runner

  build-depends:
    , base
    , effects-exceptions
    , effects-optparse      ^>=0.1
    , optparse-applicative  >=0.16.1.0 && <0.19
    , pythia
    , text
    , time

  hs-source-dirs:   exe-internal
  default-language: Haskell2010

executable pythia
  import:             common-exts
  default-extensions: ImplicitPrelude
  main-is:            Main.hs
  build-depends:
    , base
    , pythia-exe-internal

  hs-source-dirs:     app
  ghc-options:        -threaded -with-rtsopts=-N
  default-language:   Haskell2010

test-suite unit
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Unit.Prelude
    Unit.Pythia.Services.Battery.Acpi
    Unit.Pythia.Services.Battery.Types
    Unit.Pythia.Services.Battery.UPower
    Unit.Pythia.Services.Memory.Free
    Unit.Pythia.Services.Memory.Types
    Unit.Pythia.Services.NetInterface.Ip
    Unit.Pythia.Services.NetInterface.NmCli
    Unit.Pythia.Services.NetInterface.Types

  build-depends:
    , base
    , containers
    , pythia
    , refined
    , si-bytes
    , tasty        >=1.1.0.3 && <1.5
    , tasty-hunit  >=0.9     && <0.11
    , text

  hs-source-dirs:   test/unit
  default-language: Haskell2010

test-suite Integration
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Integration.Prelude
    Integration.Pythia.Services.Battery
    Integration.Pythia.Services.GlobalIp
    Integration.Pythia.Services.Memory
    Integration.Pythia.Services.NetConnection
    Integration.Pythia.Services.NetInterface
    Integration.Pythia.Services.Time

  build-depends:
    , base
    , effects-env            ^>=0.1
    , effects-exceptions
    , effects-fs
    , effects-optparse
    , effects-time
    , effects-typed-process
    , process                ^>=1.6.9.0
    , pythia
    , pythia-exe-internal
    , tasty                  >=1.1.0.3  && <1.5
    , tasty-hunit            >=0.9      && <0.11
    , text
    , time                   >=1.9.3    && <1.14
    , typed-process          >=0.1.0.0  && <0.3

  hs-source-dirs:   test/integration
  default-language: Haskell2010

test-suite functional
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Functional.Prelude
    Functional.Pythia.Services.Battery
    Functional.Pythia.Services.GlobalIp
    Functional.Pythia.Services.Memory
    Functional.Pythia.Services.NetConnection
    Functional.Pythia.Services.NetInterface
    Functional.Pythia.Services.Time

  build-depends:
    , base
    , env-guard            ^>=0.2
    , megaparsec
    , pythia
    , pythia-exe-internal
    , tasty
    , tasty-hunit
    , text

  hs-source-dirs:   test/functional
  default-language: Haskell2010

-- NOTE: Doctest disabled as it depends on GHC as a library, which is
-- apparently a problem if we want to use any boot libraries with a different
-- version than GHC's dependencies. Since we want to use the new AFP (requires
-- filepath > 1.4.100), this conflicts with using GHC.
--
-- Rather than give up on older GHCs with filepath < 1.4.100, we give up on
-- doctest for now.

-- test-suite doctest
--   import:           common-exts
--   type:             exitcode-stdio-1.0
--   main-is:          Main.hs
--   build-depends:
--     , base
--     , doctest    >=0.16.3 && <0.22
--     , env-guard

--   hs-source-dirs:   test/doctest
--   default-language: Haskell2010
