cabal-version:      2.4
name:               pythia
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.6
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

copyright:          2021-2025 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/pythia/
bug-reports:        https://github.com/tbidne/pythia/issues
synopsis:           A utility program for retrieving system information.
description:
  @pythia@ retrieves system information. It is intended to be used with
  existing utilities the user already has on their system.
  .
  The package is organized into self-contained services, where a given
  service is used to query a particular item of information. For instance,
  to query battery information, one would use the service defined in
  "Pythia.Services.Battery".
  .
  The entry point is "Pythia".

category:           System
extra-source-files: README.md
extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/pythia

common common-exts
  default-extensions:
    AllowAmbiguousTypes
    ApplicativeDo
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators
    ViewPatterns

  default-language:   Haskell2010

library
  import:          common-exts
  exposed-modules:
    Pythia
    Pythia.Control.Exception
    Pythia.Data.Command
    Pythia.Data.Percentage
    Pythia.Data.Percentage.Internal
    Pythia.Internal.ShellApp
    Pythia.Prelude
    Pythia.Services.Battery
    Pythia.Services.Battery.Acpi
    Pythia.Services.Battery.SysFs
    Pythia.Services.Battery.Types
    Pythia.Services.Battery.UPower
    Pythia.Services.GlobalIp
    Pythia.Services.GlobalIp.Types
    Pythia.Services.Memory
    Pythia.Services.Memory.Free
    Pythia.Services.Memory.Types
    Pythia.Services.NetInterface
    Pythia.Services.NetInterface.Ip
    Pythia.Services.NetInterface.NmCli
    Pythia.Services.NetInterface.Types
    Pythia.Services.Time
    Pythia.Services.Types.Network
    Pythia.Utils

  build-depends:
    , base                   >=4.16.0.0  && <4.22
    , bytestring             >=0.10.10.0 && <0.13
    , containers             >=0.6.2.1   && <0.8
    , deepseq                >=1.4.4.0   && <1.6
    , effects-fs             ^>=0.1
    , effects-terminal       ^>=0.1
    , effects-time           ^>=0.1
    , effects-typed-process  ^>=0.1
    , exception-utils        ^>=0.1
    , exceptions             ^>=0.10.4
    , kairos-core            ^>=0.1
    , megaparsec             >=7.0.5     && <9.8
    , optics-core            ^>=0.4
    , refined                >=0.6       && <0.9
    , si-bytes               ^>=0.1
    , smart-math             ^>=0.1
    , template-haskell       >=2.17.0.0  && <2.24
    , text                   >=1.2.3.2   && <2.2
    , text-display           >=0.0.3.0   && <1.1
    , time                   >=1.9.3     && <1.15

  hs-source-dirs:  src

library pythia-runner
  import:          common-exts
  other-modules:   Paths_pythia
  autogen-modules: Paths_pythia
  exposed-modules:
    Pythia.Runner
    Pythia.Runner.Args
    Pythia.Runner.Command
    Pythia.Runner.Command.Battery
    Pythia.Runner.Command.GlobalIp
    Pythia.Runner.Command.Memory
    Pythia.Runner.Command.NetConn
    Pythia.Runner.Command.NetInterface
    Pythia.Runner.Command.Time
    Pythia.Runner.These
    Pythia.Runner.Toml
    Pythia.Runner.Utils

  build-depends:
    , base
    , containers
    , effects-fs
    , effects-optparse      ^>=0.1
    , optparse-applicative  >=0.16.1.0 && <0.19
    , pythia
    , text
    , time
    , toml-reader           >=0.2.0.0  && <0.3

  hs-source-dirs:  runner

executable pythia
  import:             common-exts
  default-extensions: ImplicitPrelude
  main-is:            Main.hs
  build-depends:
    , base
    , exception-utils
    , pythia
    , pythia-runner

  hs-source-dirs:     app
  ghc-options:        -threaded -with-rtsopts=-N

test-suite unit
  import:         common-exts
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Unit.Prelude
    Unit.Pythia.Services.Battery.Acpi
    Unit.Pythia.Services.Battery.Types
    Unit.Pythia.Services.Battery.UPower
    Unit.Pythia.Services.Memory.Free
    Unit.Pythia.Services.Memory.Types
    Unit.Pythia.Services.NetInterface.Ip
    Unit.Pythia.Services.NetInterface.NmCli
    Unit.Pythia.Services.NetInterface.Types

  build-depends:
    , base
    , containers
    , pythia
    , refined
    , si-bytes
    , tasty        >=1.1.0.3 && <1.6
    , tasty-hunit  >=0.9     && <0.11
    , text

  hs-source-dirs: test/unit

test-suite Integration
  import:         common-exts
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Integration.Configuration
    Integration.Prelude
    Integration.Pythia.Services.Battery
    Integration.Pythia.Services.GlobalIp
    Integration.Pythia.Services.Memory
    Integration.Pythia.Services.NetConnection
    Integration.Pythia.Services.NetInterface
    Integration.Pythia.Services.Time

  build-depends:
    , base
    , effects-env            ^>=0.1
    , effects-fs
    , effects-optparse
    , effects-time
    , effects-typed-process
    , mtl                    >=2.2.2   && <2.4
    , pythia
    , pythia-runner
    , tasty
    , tasty-hunit            >=0.9     && <0.11
    , text
    , time
    , typed-process          >=0.1.0.0 && <0.3

  hs-source-dirs: test/integration

test-suite functional
  import:         common-exts
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Functional.Prelude
    Functional.Pythia.Services.Battery
    Functional.Pythia.Services.GlobalIp
    Functional.Pythia.Services.Memory
    Functional.Pythia.Services.NetConnection
    Functional.Pythia.Services.NetInterface
    Functional.Pythia.Services.Time

  build-depends:
    , base
    , effects-optparse
    , env-guard         ^>=0.2
    , megaparsec
    , mtl
    , pythia
    , pythia-runner
    , tasty
    , tasty-hunit
    , text

  hs-source-dirs: test/functional
