cabal-version:      2.4
name:               system-info
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
copyright:          2021 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@prontonmail.com
homepage:           https://github.com/tbidne/system-info/
bug-reports:        https://github.com/tbidne/system-info/issues
synopsis:           A utility program for retrieving system information.
description:
  Please see the README at https://github.com/tbidne/sytem-info/#readme

category:           System
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/system-info

common common-exts
  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilyDependencies

library
  import:           common-exts
  exposed-modules:
    System.Info
    System.Info.Data.BoundedNat
    System.Info.Data.Command
    System.Info.Data.NonNegative
    System.Info.Error
    System.Info.Network.Connection
    System.Info.Network.Connection.NetworkManager
    System.Info.Network.Connection.NetworkManager.Parsing
    System.Info.Network.Connection.Types
    System.Info.Power.Battery
    System.Info.Power.Battery.Types
    System.Info.Power.Battery.UPower
    System.Info.Power.Battery.UPower.Parsing
    System.Info.Utils

  build-depends:
    , attoparsec        >=0.13.2.3  && <0.15
    , base              ^>=4.14.1.0
    , bytestring        >=0.10.10.0 && <0.12
    , optics-core       ^>=0.4
    , text              ^>=1.2.3.2
    , text-conversions  >=0.2.0     && <0.4
    , typed-process     >=0.1.0.0   && <0.3

  hs-source-dirs:   src
  default-language: Haskell2010
