cabal-version:      2.4
name:               system-info
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
copyright:          2021 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@prontonmail.com
homepage:           https://github.com/tbidne/system-info/
bug-reports:        https://github.com/tbidne/system-info/issues
synopsis:           A utility program for retrieving system information.
description:
  System-Info retrieves system information. It is intended to be used with
  existing utilities the user already has on their system.
  .
  The package is organized into self-containted services, where a given
  service is used to query a particular item of information. For instance,
  to query battery state information, one would use service defined in
  use "System.Info.Services.Battery.State".
  .
  These services can be imported unqualified, though if multiple are used
  in the same module then they should be qualified. The supported services
  are:
  .
  * "System.Info.Services.Battery.ChargeStatus"
  * "System.Info.Services.Battery.State"
  * "System.Info.Services.Network.Connection"

category:           System
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/system-info

common common-exts
  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilyDependencies

library
  import:           common-exts
  exposed-modules:
    System.Info.Data
    System.Info.Services.Battery.ChargeStatus
    System.Info.Services.Battery.ChargeStatus.UPower
    System.Info.Services.Battery.State
    System.Info.Services.Battery.State.UPower
    System.Info.Services.Battery.Types
    System.Info.Services.Network.Connection
    System.Info.Services.Network.Connection.NetworkManager
    System.Info.Services.Network.Connection.Types
    System.Info.ShellApp
    System.Info.Utils

  build-depends:
    , attoparsec        >=0.13.2.3  && <0.15
    , base              ^>=4.14.1.0
    , bytestring        >=0.10.10.0 && <0.12
    , optics-core       ^>=0.4
    , simple-algebra    ^>=0.1.0.0
    , text              ^>=1.2.3.2
    , text-conversions  >=0.2.0     && <0.4
    , typed-process     >=0.1.0.0   && <0.3

  hs-source-dirs:   src
  default-language: Haskell2010
